--- a/kubernetes-manifests/paymentservice.yaml
+++ b/kubernetes-manifests/paymentservice.yaml
@@ -43,7 +43,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: paymentservice
+        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.10.1
         ports:
         - containerPort: 50051
         env:
