--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -35,9 +35,7 @@ steps:
     gcloud container clusters get-credentials --region=$_REGION $_CLUSTER;
     
     # Deploy the application using Skaffold
-    # skaffold run -f=skaffold.yaml --default-repo=us-central1-docker.pkg.dev/my-project/microservices-demo;
-    skaffold run -f=skaffold.yaml --default-repo=gcr.io/mythical-module-281204/microservices-demo;
-
+    skaffold run -f=skaffold.yaml --default-repo=us-central1-docker.pkg.dev/mythical-module-281204/microservices-demo;
 # Add more power, and more time, for heavy Skaffold build
 timeout: '3600s'
 options:
